src/objects/PSA_Card_Transaction__c.object
<CustomObject>
    <description>This object will contain the results of the integration that processes the corporate card transactions loaded into PSA Card Transaction Stage.</description>
    <fields>
        <fullName>Amount_in_Billing_Currency_Value__c</fullName>
        <formula>PSA_Amount_in_Billing_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount in Billing Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_in_Original_Currency_Value__c</fullName>
        <formula>PSA_Amount_in_Original_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount in Original Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Itemized_Card_Reimbursement_Amount__c</fullName>
        <label>Itemized Card Reimbursement Amount</label>
        <summarizedField>PSA_Card_Transaction_Item__c.Corporate_Card_Reimbursement_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>PSA_Card_Transaction_Item__c.PSA_Charge_Type__c</field>
            <operation>equals</operation>
            <value>Personal</value>
        </summaryFilterItems>
        <summaryForeignKey>PSA_Card_Transaction_Item__c.PSA_Card_Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link_To_Card_Transactions__c</fullName>
        <description>Link to the custom add expense card transaction screen</description>
        <formula>hyperlink((LEFT($Api.Enterprise_Server_URL_190, FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_190)) &amp; &apos;/apex/psaExpenseAddCardTransactions&apos;), &apos;Card Transactions&apos;)</formula>
        <label>Link To Card Transactions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Personal_Transactions__c</fullName>
        <label>Number of Personal Transactions</label>
        <summaryFilterItems>
            <field>PSA_Card_Transaction_Item__c.PSA_Charge_Type__c</field>
            <operation>equals</operation>
            <value>Personal</value>
        </summaryFilterItems>
        <summaryForeignKey>PSA_Card_Transaction_Item__c.PSA_Card_Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSA_Alternate_Sales_Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In some countries there is more than one value added tax</description>
        <label>Alternate Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Alternate_Tax_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the alternate tax amount is included in the purchase amount</description>
        <label>Alternate Tax Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Billing_Currency__c</fullName>
        <description>Copied from same field in PSA Card Transaction Stage.  This represents the amount expected to be repaid for the given transaction.</description>
        <inlineHelpText>Copied from same field in PSA Card Transaction Stage.  This represents the amount expected to be repaid for the given transaction.</inlineHelpText>
        <label>Amount in Billing Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Original_Currency__c</fullName>
        <description>The amount of the transaction, in terms of the OriginalCurrencyCode. This will be used to set the expense amount.

Note: If the transaction is brought in by the integration as a debit, this will be a negative value.</description>
        <label>Amount in Original Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Assigned_Itemized_Amount__c</fullName>
        <description>Sum of all Assigned itemized transaction amounts.</description>
        <inlineHelpText>Sum of all Assigned itemized transaction amounts.</inlineHelpText>
        <label>PSA Assigned Itemized Amount</label>
        <summarizedField>PSA_Card_Transaction_Item__c.PSA_Amount_in_Original_Currency__c</summarizedField>
        <summaryForeignKey>PSA_Card_Transaction_Item__c.PSA_Card_Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSA_CardBillingCurrencyCode__c</fullName>
        <label>Card Billing Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Card Transaction 18-Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the staging object used to create this card transaction</description>
        <inlineHelpText>the staging object used to create this card transaction</inlineHelpText>
        <label>PSA Card Transaction Stage</label>
        <referenceTo>PSA_Card_Transaction_Stage__c</referenceTo>
        <relationshipLabel>PSA Card Transactions</relationshipLabel>
        <relationshipName>PSA_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Discard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_EmployeeId__c</fullName>
        <description>Employee Id provided by Bank of America - for lookup of the corresponding PSA Resource / Salesforce User</description>
        <label>EmployeeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a transaction is converted to one or more PSA expenses, this will be updated to refer to the expense report to which the expense(s) were added.  

A single transaction may result in multiple expense lines, so there is no lookup on this object to Expense.</description>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>PSA Card Transactions</relationshipLabel>
        <relationshipName>PSA_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Type__c</fullName>
        <label>PSA Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel_Expenses_Airfare</fullName>
                    <default>true</default>
                    <label>Travel Expenses Airfare</label>
                </value>
                <value>
                    <fullName>Auto Mileage</fullName>
                </value>
                <value>
                    <fullName>Business Meals</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Company Event</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>General and Admin Expenses</fullName>
                </value>
                <value>
                    <fullName>IT Equipment and Services</fullName>
                </value>
                <value>
                    <fullName>Lodging (Room and Tax)</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Office Supplies and Services</fullName>
                </value>
                <value>
                    <fullName>Parking &amp; Tolls</fullName>
                </value>
                <value>
                    <fullName>Personal Meals</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Postage and Shipping</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Subway</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Ground Transportation</fullName>
                </value>
                <value>
                    <fullName>(Internal) Advertising and Promotion</fullName>
                </value>
                <value>
                    <fullName>(Internal) Business License and Permits</fullName>
                </value>
                <value>
                    <fullName>(Internal) Charitable Contributions</fullName>
                </value>
                <value>
                    <fullName>(Internal) Continuing Education</fullName>
                </value>
                <value>
                    <fullName>(Internal) General Insurance</fullName>
                </value>
                <value>
                    <fullName>(Internal) Company Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_FX__c</fullName>
        <description>The exchange rate between the incurred currency and billing (resource) currency.  This will be applied to the expense âs user-supplied exchange rate, to override the system-provided exchange rate, in order to match the transaction.

Note: This assumes that the billing currency from the card transaction feed, which represents the card customerâs currency, will always match the PSA Resource currency of the cardholder.</description>
        <inlineHelpText>The exchange rate between the incurred currency and billing (resource) currency.  This will be applied to the expense as a user-defined exchange rate, to override the system-provided exchange rate, in order to match the transaction.</inlineHelpText>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Invalid_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to indicate the transaction is invalid.</description>
        <inlineHelpText>Check to indicate the transaction is invalid.</inlineHelpText>
        <label>Invalid Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Country_Code__c</fullName>
        <description>For setting the expense description and incurred location info on the expense</description>
        <label>Merchant Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Name__c</fullName>
        <description>For setting the expense description</description>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Postal_Code__c</fullName>
        <label>Merchant Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_State_Province__c</fullName>
        <description>For setting the expense description and incurred location info on the expense</description>
        <label>Merchant State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Operations_Review_Comments__c</fullName>
        <label>Operations Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Operations_Review_Reason__c</fullName>
        <description>NUSR - (No Salesforce User Found)
NCNT - (No Contact Found)
NRSC - (Contact.pse__Is_Resource__c = False)
ACTV - (Contact.pse__Is_Resource_Active__c = False)
TERM - (Contact.PSA_Resource_Review_Status__c = âTerminationâ)
TRNS - (Contact.PSA_Resource_Review_Status__c = âTransfer Outâ)
LCTN - (No matching country or state objects were found and so the Incurred Country and/or Incurred State / Province could not be set)</description>
        <label>Operations Review Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NUSR</fullName>
                </value>
                <value>
                    <fullName>NCNT</fullName>
                </value>
                <value>
                    <fullName>NRSC</fullName>
                </value>
                <value>
                    <fullName>ACTV</fullName>
                </value>
                <value>
                    <fullName>TERM</fullName>
                </value>
                <value>
                    <fullName>TRNS</fullName>
                </value>
                <value>
                    <fullName>LCTN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Operations_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Posting_Date__c</fullName>
        <description>Needed for informational purposes, but not for expense creation/processing</description>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Previously_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Note, by selecting this box you are stating you have already processed this transaction.</description>
        <inlineHelpText>Note, by selecting this box you are stating you have already processed this transaction.</inlineHelpText>
        <label>Previously Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Processor_Transaction_Id__c</fullName>
        <description>External, unique transaction Id provided by Bank of America for each transaction</description>
        <externalId>true</externalId>
        <label>Processor Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Remaining_Transaction_Amount__c</fullName>
        <formula>PSA_Amount_in_Original_Currency__c - PSA_Assigned_Itemized_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PSA Card Transactions</relationshipLabel>
        <relationshipName>PSA_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Sales_Tax_Amount__c</fullName>
        <description>Tax paid on goods purchased</description>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce user associated with the EmployeeId value.  For mapping of the transaction to a PSA user. Each PSA Card Transaction record will be given ownership to this user, so that with private sharing enabled, users wonât be able to see each othersâ card transaction info.</description>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PSA_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Status__c</fullName>
        <description>The status of the transaction record regarding how it will be used.  Options include:
Unassigned (default)
Assigned
Discarded</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned (default)</fullName>
                    <default>true</default>
                    <label>Unassigned (default)</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Transaction_Date__c</fullName>
        <description>Represents the date that the transaction took place. This will be used to set the incurred date for any expenses created from the transaction.</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Transaction_Id__c</fullName>
        <description>System generated sequential</description>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Card_Reimbursement_Amount__c</fullName>
        <formula>IF(ISPICKVAL(PSA_Charge_Type__c,&apos;Company&apos;),&apos;0&apos;, IF(ISPICKVAL(PSA_Charge_Type__c,&apos;Personal&apos;), PSA_Card_Transaction_Stage__r.PSA_Billing_Currency_Currency_Code__c &amp;  &apos; &apos; &amp;  Text(ROUND(Amount_in_Original_Currency_Value__c,2) ), PSA_Card_Transaction_Stage__r.PSA_Billing_Currency_Currency_Code__c &amp; &apos; &apos; &amp;  Text(ROUND(Itemized_Card_Reimbursement_Amount__c,2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Card Reimbursement Amount</label>
        <type>Text</type>
    </fields>
    <label>PSA Card Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Id__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Resource__c</columns>
        <columns>PSA_Amount_in_Billing_Currency__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <columns>PSA_Expense_Report__c</columns>
        <columns>PSA_FX__c</columns>
        <columns>PSA_Invalid_Transaction__c</columns>
        <columns>Itemized_Card_Reimbursement_Amount__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Discarded_Transactions</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Operations_Review__c</columns>
        <columns>PSA_Operations_Review_Reason__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <columns>PSA_Resource_Inactive__c</columns>
        <columns>PSA_Discard__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Discard__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Discarded Transactions</label>
        <sharedTo>
            <group>Operations_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Transactions_All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Transactions All</label>
    </listViews>
    <listViews>
        <fullName>My_Transactions_Company</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PSA_Status__c</field>
            <operation>equals</operation>
            <value>Unassigned (default),Assigned</value>
        </filters>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PSA_Charge_Type__c</field>
            <operation>equals</operation>
            <value>Company</value>
        </filters>
        <filters>
            <field>PSA_Previously_Entered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Transactions Company</label>
    </listViews>
    <listViews>
        <fullName>My_Transactions_Expensed</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PSA_Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PSA_Charge_Type__c</field>
            <operation>equals</operation>
            <value>Company</value>
        </filters>
        <filters>
            <field>PSA_Previously_Entered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Transactions Expensed</label>
    </listViews>
    <listViews>
        <fullName>My_Transactions_Personal</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PSA_Charge_Type__c</field>
            <operation>equals</operation>
            <value>Personal</value>
        </filters>
        <filters>
            <field>PSA_Previously_Entered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Transactions Personal</label>
    </listViews>
    <listViews>
        <fullName>My_Transactions_Previously_Entered</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PSA_Previously_Entered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Transactions - Previously Entered</label>
    </listViews>
    <listViews>
        <fullName>My_Transactions_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PSA_Status__c</field>
            <operation>equals</operation>
            <value>Unassigned (default)</value>
        </filters>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PSA_Previously_Entered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Transactions Unassigned</label>
    </listViews>
    <listViews>
        <fullName>Operations_Review_Queue_PSA_Card_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>Operations Review Queue</label>
        <queue>Operations_Review_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operations_Review_Required</fullName>
        <columns>NAME</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Operations_Review__c</columns>
        <columns>PSA_Operations_Review_Reason__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Operations_Review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PSA_Discard__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Operations Review Required</label>
        <sharedTo>
            <group>Operations_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_Transactions</fullName>
        <columns>NAME</columns>
        <columns>PSA_Resource__c</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>PSA_Operations_Review__c</columns>
        <columns>PSA_Operations_Review_Reason__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Amount_in_Original_Currency__c</columns>
        <columns>PSA_Charge_Type__c</columns>
        <columns>PSA_EmployeeId__c</columns>
        <columns>PSA_Resource_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Status__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <filters>
            <field>PSA_Charge_Type__c</field>
            <operation>notEqual</operation>
            <value>Personal</value>
        </filters>
        <label>Unassigned Transactions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PSA Card Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Card Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>